--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             <div class="row g-4 portfolio-container">
                 <div class="col-lg-4 col-md-6 portfolio-item first wow fadeInUp" data-wow-delay="0.1s">
                     <div class="portfolio-inner">
-                        <img class="img-fluid w-100" src="img\mobile1.jpg" alt="">
+                        <img class="img-fluid w-100" src="img\Security-Camera-Installation-Long-Island-Business-Security-Cameras.png" alt="">
                         <div class="text-center p-4">
                             <p class="text-primary mb-2">Business Security Systems</p>
                             <h5 class="lh-base mb-0">Mobile Access</h5>
@@ -357,7 +357,7 @@
                             <p class="text-primary mb-2">Business Security Systems</p>
                             <h5 class="lh-base mb-3">Mobile Access</h5>
                             <div class="d-flex justify-content-center">
-                                <a class="btn btn-square btn-primary rounded-circle mx-1" href="img\mobile1.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                                <a class="btn btn-square btn-primary rounded-circle mx-1" href="img\Security-Camera-Installation-Long-Island-Business-Security-Cameras.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                                 <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fa fa-link"></i></a>
                             </div>
                         </div>
@@ -365,7 +365,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.3s">
                     <div class="portfolio-inner">
-                        <img class="img-fluid w-100" src="img\video2.jpg" alt="">
+                        <img class="img-fluid w-100" src="img\Video-Intercom-Access-Control-Systems-For-Schools-Business-Apartment-Buildings-Long-Island.png" alt="">
                         <div class="text-center p-4">
                             <p class="text-primary mb-2">Video Intercom</p>
                             <h5 class="lh-base mb-0">Apartment Building Access Control</h5>
@@ -374,7 +374,7 @@
                             <p class="text-primary mb-2">Video Intercom</p>
                             <h5 class="lh-base mb-3">Apartment Building Access Control</h5>
                             <div class="d-flex justify-content-center">
-                                <a class="btn btn-square btn-primary rounded-circle mx-1" href=" img\video2.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                                <a class="btn btn-square btn-primary rounded-circle mx-1" href="img\Video-Intercom-Access-Control-Systems-For-Schools-Business-Apartment-Buildings-Long-Island.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                                 <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fa fa-link"></i></a>
                             </div>
                         </div>
@@ -382,7 +382,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item first wow fadeInUp" data-wow-delay="0.5s">
                     <div class="portfolio-inner">
-                        <img class="img-fluid w-100" src="img\doorbell3.jpg" alt="">
+                        <img class="img-fluid w-100" src="img\Access-Control-Systems-Long-Island-NY.png" alt="">
                         <div class="text-center p-4">
                             <p class="text-primary mb-2">Access Control Systems</p>
                             <h5 class="lh-base mb-0">Smart Locks and Magnetic Locks</h5>
@@ -391,7 +391,7 @@
                             <p class="text-primary mb-2">Access Control Systems</p>
                             <h5 class="lh-base mb-3">Smart Locks and Magnetic Locks</h5>
                             <div class="d-flex justify-content-center">
-                                <a class="btn btn-square btn-primary rounded-circle mx-1" href="img\doorbell3.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                                <a class="btn btn-square btn-primary rounded-circle mx-1" href="img\Access-Control-Systems-Long-Island-NY.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                                 <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fa fa-link"></i></a>
                             </div>
                         </div>
@@ -399,7 +399,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.1s">
                     <div class="portfolio-inner">
-                        <img class="img-fluid w-100" src="img\garge4.jpg" alt="">
+                        <img class="img-fluid w-100" src="img\Alarm-System-Installation-Long-Island-Fire-and-Burglar-Alarm.png" alt="">
                         <div class="text-center p-4">
                             <p class="text-primary mb-2">Alarm Systems-Alarm Systems</p>
                             <h5 class="lh-base mb-0">Burglar, Instrusion and Fire</h5>
@@ -408,7 +408,7 @@
                             <p class="text-primary mb-2">Alarm Systems-Alarm Systems</p>
                             <h5 class="lh-base mb-3">Burglar, Instrusion and Fire</h5>
                             <div class="d-flex justify-content-center">
-                                <a class="btn btn-square btn-primary rounded-circle mx-1" href="img\garge4.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                                <a class="btn btn-square btn-primary rounded-circle mx-1" href="img\Alarm-System-Installation-Long-Island-Fire-and-Burglar-Alarm.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                                 <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fa fa-link"></i></a>
                             </div>
                         </div>
@@ -416,7 +416,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item first wow fadeInUp" data-wow-delay="0.3s">
                     <div class="portfolio-inner">
-                        <img class="img-fluid w-100" src="img\monitor5.png" alt="">
+                        <img class="img-fluid w-100" src="img\Long-Island-Security-Camera-Installation.png" alt="">
                         <div class="text-center p-4">
                             <p class="text-primary mb-2">CCTV & Video</p>
                             <h5 class="lh-base mb-0">24/7 Monitoring</h5>
@@ -425,7 +425,7 @@
                             <p class="text-primary mb-2">CCTV & Video</p>
                             <h5 class="lh-base mb-3">Monitoring24/7 Monitoring</h5>
                             <div class="d-flex justify-content-center">
-                                <a class="btn btn-square btn-primary rounded-circle mx-1" href="img\monitor5.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                                <a class="btn btn-square btn-primary rounded-circle mx-1" href="img\Long-Island-Security-Camera-Installation.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                                 <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fa fa-link"></i></a>
                             </div>
                         </div>
@@ -433,7 +433,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
                     <div class="portfolio-inner">
-                        <img class="img-fluid w-100" src="img\outdoor6.jpg" alt="">
+                        <img class="img-fluid w-100" src="img\Smart-Home-Long-Island-Smart-Business-Video-Conferencing-Long-Island.png" alt="">
                         <div class="text-center p-4">
                             <p class="text-primary mb-2">Smart Home & Smart Business</p>
                             <h5 class="lh-base mb-0">Conference systems and much more!</h5>
@@ -442,7 +442,7 @@
                             <p class="text-primary mb-2">Smart Home & Smart Business</p>
                             <h5 class="lh-base mb-3">Conference systems and much more!</h5>
                             <div class="d-flex justify-content-center">
-                                <a class="btn btn-square btn-primary rounded-circle mx-1" href="img\outdoor6.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                                <a class="btn btn-square btn-primary rounded-circle mx-1" href="img\Smart-Home-Long-Island-Smart-Business-Video-Conferencing-Long-Island.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                                 <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fa fa-link"></i></a>
                             </div>
                         </div>
