--- a/project.html
+++ b/project.html
@@ -125,9 +125,8 @@
     </div>
     <!-- Page Header End -->
 
-
-  <!-- Projects Start -->
-  <div class="container-xxl py-5 mb-5">
+<!-- Projects Start -->
+<div class="container-xxl py-5 mb-5">
     <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
             <div class="bg-primary mb-3 mx-auto" style="width: 60px; height: 2px;"></div>
@@ -139,7 +138,7 @@
         <div class="row g-4 portfolio-container">
             <div class="col-lg-4 col-md-6 portfolio-item first wow fadeInUp" data-wow-delay="0.1s">
                 <div class="portfolio-inner">
-                    <img class="img-fluid w-100" src="img\mobile1.jpg" alt="">
+                    <img class="img-fluid w-100" src="img\Security-Camera-Installation-Long-Island-Business-Security-Cameras.png" alt="">
                     <div class="text-center p-4">
                         <p class="text-primary mb-2">Business Security Systems</p>
                         <h5 class="lh-base mb-0">Mobile Access</h5>
@@ -148,7 +147,7 @@
                         <p class="text-primary mb-2">Business Security Systems</p>
                         <h5 class="lh-base mb-3">Mobile Access</h5>
                         <div class="d-flex justify-content-center">
-                            <a class="btn btn-square btn-primary rounded-circle mx-1" href="img\mobile1.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-square btn-primary rounded-circle mx-1" href="img\Security-Camera-Installation-Long-Island-Business-Security-Cameras.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fa fa-link"></i></a>
                         </div>
                     </div>
@@ -156,7 +155,7 @@
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.3s">
                 <div class="portfolio-inner">
-                    <img class="img-fluid w-100" src="img\video2.jpg" alt="">
+                    <img class="img-fluid w-100" src="img\Video-Intercom-Access-Control-Systems-For-Schools-Business-Apartment-Buildings-Long-Island.png" alt="">
                     <div class="text-center p-4">
                         <p class="text-primary mb-2">Video Intercom</p>
                         <h5 class="lh-base mb-0">Apartment Building Access Control</h5>
@@ -165,7 +164,7 @@
                         <p class="text-primary mb-2">Video Intercom</p>
                         <h5 class="lh-base mb-3">Apartment Building Access Control</h5>
                         <div class="d-flex justify-content-center">
-                            <a class="btn btn-square btn-primary rounded-circle mx-1" href=" img\video2.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-square btn-primary rounded-circle mx-1" href="img\Video-Intercom-Access-Control-Systems-For-Schools-Business-Apartment-Buildings-Long-Island.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fa fa-link"></i></a>
                         </div>
                     </div>
@@ -173,7 +172,7 @@
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item first wow fadeInUp" data-wow-delay="0.5s">
                 <div class="portfolio-inner">
-                    <img class="img-fluid w-100" src="img\doorbell3.jpg" alt="">
+                    <img class="img-fluid w-100" src="img\Access-Control-Systems-Long-Island-NY.png" alt="">
                     <div class="text-center p-4">
                         <p class="text-primary mb-2">Access Control Systems</p>
                         <h5 class="lh-base mb-0">Smart Locks and Magnetic Locks</h5>
@@ -182,7 +181,7 @@
                         <p class="text-primary mb-2">Access Control Systems</p>
                         <h5 class="lh-base mb-3">Smart Locks and Magnetic Locks</h5>
                         <div class="d-flex justify-content-center">
-                            <a class="btn btn-square btn-primary rounded-circle mx-1" href="img\doorbell3.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-square btn-primary rounded-circle mx-1" href="img\Access-Control-Systems-Long-Island-NY.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fa fa-link"></i></a>
                         </div>
                     </div>
@@ -190,7 +189,7 @@
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.1s">
                 <div class="portfolio-inner">
-                    <img class="img-fluid w-100" src="img\garge4.jpg" alt="">
+                    <img class="img-fluid w-100" src="img\Alarm-System-Installation-Long-Island-Fire-and-Burglar-Alarm.png" alt="">
                     <div class="text-center p-4">
                         <p class="text-primary mb-2">Alarm Systems-Alarm Systems</p>
                         <h5 class="lh-base mb-0">Burglar, Instrusion and Fire</h5>
@@ -199,7 +198,7 @@
                         <p class="text-primary mb-2">Alarm Systems-Alarm Systems</p>
                         <h5 class="lh-base mb-3">Burglar, Instrusion and Fire</h5>
                         <div class="d-flex justify-content-center">
-                            <a class="btn btn-square btn-primary rounded-circle mx-1" href="img\garge4.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-square btn-primary rounded-circle mx-1" href="img\Alarm-System-Installation-Long-Island-Fire-and-Burglar-Alarm.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fa fa-link"></i></a>
                         </div>
                     </div>
@@ -207,7 +206,7 @@
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item first wow fadeInUp" data-wow-delay="0.3s">
                 <div class="portfolio-inner">
-                    <img class="img-fluid w-100" src="img\monitor5.png" alt="">
+                    <img class="img-fluid w-100" src="img\Long-Island-Security-Camera-Installation.png" alt="">
                     <div class="text-center p-4">
                         <p class="text-primary mb-2">CCTV & Video</p>
                         <h5 class="lh-base mb-0">24/7 Monitoring</h5>
@@ -216,7 +215,7 @@
                         <p class="text-primary mb-2">CCTV & Video</p>
                         <h5 class="lh-base mb-3">Monitoring24/7 Monitoring</h5>
                         <div class="d-flex justify-content-center">
-                            <a class="btn btn-square btn-primary rounded-circle mx-1" href="img\monitor5.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-square btn-primary rounded-circle mx-1" href="img\Long-Island-Security-Camera-Installation.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fa fa-link"></i></a>
                         </div>
                     </div>
@@ -224,7 +223,7 @@
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
                 <div class="portfolio-inner">
-                    <img class="img-fluid w-100" src="img\outdoor6.jpg" alt="">
+                    <img class="img-fluid w-100" src="img\Smart-Home-Long-Island-Smart-Business-Video-Conferencing-Long-Island.png" alt="">
                     <div class="text-center p-4">
                         <p class="text-primary mb-2">Smart Home & Smart Business</p>
                         <h5 class="lh-base mb-0">Conference systems and much more!</h5>
@@ -233,7 +232,7 @@
                         <p class="text-primary mb-2">Smart Home & Smart Business</p>
                         <h5 class="lh-base mb-3">Conference systems and much more!</h5>
                         <div class="d-flex justify-content-center">
-                            <a class="btn btn-square btn-primary rounded-circle mx-1" href="img\outdoor6.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-square btn-primary rounded-circle mx-1" href="img\Smart-Home-Long-Island-Smart-Business-Video-Conferencing-Long-Island.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fa fa-link"></i></a>
                         </div>
                     </div>
