--- a/index.html
+++ b/index.html
@@ -566,7 +566,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-light mb-4"><span style="color: red;font-size: 50px;">Alpha</span> Computer Group</h5>
-                     
+                    <div class="col-lg-3 col-md-6">
+                        <img src="img\Long-Island-Security-Camera-Installation.png" class="w-100">
+                    </div>
                 </div>
             </div>
         </div>
