--- a/index.html
+++ b/index.html
@@ -166,6 +166,61 @@
     <!-- Carousel End -->
 
 
+    <!-- Contact Start -->
+    <div class="container-fluid bg-light overflow-hidden px-lg-0">
+        <div class="container contact px-lg-0">
+            <div class="row g-0 mx-lg-0 text-center">
+                <div class="col-lg-2"></div>
+                <div class="col-lg-8 justify-content-center  contact-text py-5 wow fadeIn" data-wow-delay="0.5s">
+                    <div class="p-lg-5 ps-lg-0">
+                        <div class="section-title ">
+                            <h1 class="display-5 mb-4">Contact Us</h1>
+                        </div>
+                        <p class="mb-4">Contact Alpha Computer Group today. One of our Security Representatives will contact you immediately. We will then schedule an appointment for our Security Camera Installers Long Island to come out and give you a no cost/no obligation FREE estimate!</p>
+                        <form>
+                            <div class="row g-3 justify-content-center">
+                                <div class="col-md-6">
+                                    <div class="form-floating">
+                                        <input type="text" class="form-control" id="name" placeholder="Your Name">
+                                        <label for="name">Your Name</label>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-floating">
+                                        <input type="email" class="form-control" id="email" placeholder="Your Email">
+                                        <label for="email">Your Email</label>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="form-floating">
+                                        <input type="text" class="form-control" id="subject" placeholder="Subject">
+                                        <label for="subject">Subject</label>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="form-floating">
+                                        <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
+                                        <label for="message">Message</label>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <!-- <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button> -->
+                                    <button class="btn btn-primary w-100 py-3 g-recaptcha" 
+                                    data-sitekey="6Lc-WDkqAAAAANLHYB7BmnwkHz7jSkGVvIRhKxZz" 
+                                    data-callback='onSubmit' 
+                                    data-action='submit'>Submit</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+    <!-- Contact End -->
+
+
     <!-- Facts Start -->
     <div class="container-xxl py-5">
         <div class="container">
@@ -566,9 +621,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-light mb-4"><span style="color: red;font-size: 50px;">Alpha</span> Computer Group</h5>
-                    <div class="col-lg-3 col-md-6">
-                        <img src="img\Long-Island-Security-Camera-Installation.png" class="w-100">
-                    </div>
+                  
                 </div>
             </div>
         </div>
