--- a/index.html
+++ b/index.html
@@ -573,18 +573,18 @@
                     <p class="fs-5">"I recently had Alpha Computer Group install a security camera system at my business, and I'm blown away by the quality and functionality! The cameras are sleek and discreet, and the video feed is crystal clear.
                     </p>
                     <h4>Maria</h4>
-                    <span class="text-primary">Profession</span>
+                    <span class="text-primary">Businessman</span>
                 </div>
                 <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-2.jpg' alt=''>">
                     <p class="fs-5">The team at Alpha Computer Group took the time to understand my specific security needs and designed a customized system that fits my budget and exceeds my expectations.</p>
                     <h4>jhon</h4>
-                    <span class="text-primary">Profession</span>
+                    <span class="text-primary">Businessman</span>
                 </div>
                 <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-3.jpg' alt=''>">
                     <p class="fs-5">"I'm thoroughly impressed with the camera solutions provided by Alpha Computer Group! The image quality is exceptional, and the cameras are incredibly easy to use.
                     </p>
                     <h4>smith</h4>
-                    <span class="text-primary">Profession</span>
+                    <span class="text-primary">Businessman</span>
                 </div>
             </div>
         </div>
